--- a/.github/workflows/ghcr_cleanup.yml
+++ b/.github/workflows/ghcr_cleanup.yml
@@ -1,8 +1,7 @@
 on:
   workflow_dispatch:
   schedule:
-    - cron: "*/10 * * * *"
-    #- cron: "0 4 * * *"
+    - cron: "0 4 * * *"
 
 name: GHCR cleanup
 
