--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,18 +11,8 @@ jobs:
       with:
         node-version: 16
         registry-url: https://registry.npmjs.org/
-    - name: Get NodeJS Version
-      id: nodeversion
-      run: |
-        echo "::set-output name=version::$(node --version)"
-    - name: Restore node_modules cache
-      id: cache-node-modules
-      uses: actions/cache@v3
-      with:
-        path: node_modules
-        key: ${{ runner.os }}-${{ steps.nodeversion.outputs.version }}-${{ hashFiles('npm-shrinkwrap.json') }}
+        cache: 'npm'
     - name: Install dependencies
-      if: steps.cache-node-modules.outputs.cache-hit != 'true'
       run: npm ci
     - name: Build
       run: npm run build
@@ -83,30 +73,32 @@ jobs:
           -u ${{ secrets.HASSIO_TRIGGER_SECRET }} \
           "https://dev.azure.com/zigbee2mqtt/Zigbee2mqtt%20Add-on/_apis/build/builds?api-version=5.1"
 
-  tests:    
+  tests:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        node: [14, 16, 17]
+        node: [14, 16, 17, 18]
         exclude:
           - os: windows-latest # https://github.com/serialport/node-serialport/issues/2344
             node: 17
     runs-on: ${{ matrix.os }}
+    continue-on-error: true
     steps:
       - uses: actions/checkout@v3
+      - name: Cache node-gyp
+        uses: actions/cache@v3        
+        with:
+          key: ${{ matrix.os }}-${{ matrix.node }}-node-gyp
+          path: |
+            /home/runner/.cache/node-gyp
+            C:\Users\runneradmin\AppData\Local\node-gyp
+            /Users/runner/Library/Caches/node-gyp
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
           registry-url: https://registry.npmjs.org/
-      
-      - name: Restore node_modules cache
-        id: cache-node-modules
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-${{ matrix.node }}-${{ hashFiles('npm-shrinkwrap.json') }}
+          cache: 'npm'
       - name: Install dependencies
-        if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: npm ci
       - name: Lint
         run: npm run eslint
