--- a/.github/workflows/depsreview.yaml
+++ b/.github/workflows/depsreview.yaml
@@ -1,4 +1,4 @@
-name: 'Dependency Review'
+name: 'Dependency review'
 on: [pull_request]
 
 permissions:
@@ -8,7 +8,7 @@ jobs:
   dependency-review:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout Repository'
+      - name: 'Checkout repository'
         uses: actions/checkout@v3
-      - name: 'Dependency Review'
+      - name: 'Dependency review'
         uses: actions/dependency-review-action@v1
