--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,10 +77,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        node: [14, 16, 17, 18]
-        exclude:
-          - os: windows-latest # https://github.com/serialport/node-serialport/issues/2344
-            node: 17
+        node: [14, 16, 18]
     runs-on: ${{ matrix.os }}
     continue-on-error: true
     steps:
