--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,7 +99,7 @@ jobs:
           registry-url: https://registry.npmjs.org/
           cache: 'npm'
       - name: Install dependencies
-        run: npm ci
+        run: npm install --ignore-scripts
       - name: Lint
         run: npm run eslint
       - name: Build
