--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,21 +85,14 @@ jobs:
     continue-on-error: true
     steps:
       - uses: actions/checkout@v3
-      - name: Cache node-gyp
-        uses: actions/cache@v3        
-        with:
-          key: ${{ matrix.os }}-${{ matrix.node }}-node-gyp
-          path: |
-            /home/runner/.cache/node-gyp
-            C:\Users\runneradmin\AppData\Local\node-gyp
-            /Users/runner/Library/Caches/node-gyp
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
           registry-url: https://registry.npmjs.org/
           cache: 'npm'
       - name: Install dependencies
-        run: npm ci
+        # --ignore-scripts prevents the serialport build which often fails on Windows
+        run: npm ci --ignore-scripts
       - name: Lint
         run: npm run eslint
       - name: Build
