--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -22,4 +22,4 @@ jobs:
         days-before-stale: 30
         days-before-close: 7
         operations-per-run: 500
-        exempt-issue-labels: 'breaking change'
+        exempt-issue-labels: dont-stale
