--- a/data/configuration.yaml
+++ b/data/configuration.yaml
@@ -1,42 +1,20 @@
+# Home Assistant integration (MQTT discovery)
 homeassistant: false
-permit_join: false
-mqtt:
-  base_topic: zigbee2mqtt
-  server: mqtt://localhost
-frontend:
-  port: 8080
-  host: 0.0.0.0
-serial:
-  port: tcp://192.168.0.162:8888
-  adapter: ezsp
-availability:
-  active:
-    timeout: 60
-  passive:
-    timeout: 240
-devices:
-  '0xec1bbdfffee4d427':
-    friendly_name: Bedroom Left
-  '0xec1bbdfffe91c074':
-    friendly_name: Ivana Office
-  '0x00124b0024c24cbe':
-    friendly_name: Sonoff plug
-    description: ''
-  '0xec1bbdfffee4d728':
-    friendly_name: Front room window
-  '0xec1bbdfffe91c04d':
-    friendly_name: Front room
-  '0xec1bbdfffee4d935':
-    friendly_name: Basement Garden
-  '0xec1bbdfffee4d954':
-    friendly_name: Basement Louis' room
-  '0xec1bbdfffe91c02b':
-    friendly_name: Basement Louis' window
-  '0xec1bbdfffe91c05e':
-    friendly_name: Basement bathroom
-  '0xec1bbdfffe91c041':
-    friendly_name: Bedroom Right
-advanced:
-  log_level: info
-  cache_state_persist_on_leave: true
 
+# allow new devices to join
+permit_join: true
+
+# MQTT settings
+mqtt:
+  # MQTT base topic for zigbee2mqtt MQTT messages
+  base_topic: zigbee2mqtt
+  # MQTT server URL
+  server: 'mqtt://localhost'
+  # MQTT server authentication, uncomment if required:
+  # user: my_user
+  # password: my_password
+
+# Serial settings
+serial:
+  # Location of CC2531 USB sniffer
+  port: /dev/ttyACM0
