--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "winston-syslog": "^2.7.0",
     "winston-transport": "^4.5.0",
     "ws": "^8.11.0",
-    "zigbee-herdsman": "0.14.83",
-    "zigbee-herdsman-converters": "15.0.12-hotfix.0",
+    "zigbee-herdsman": "0.14.83-hotfix.0",
+    "zigbee-herdsman-converters": "15.0.12-hotfix.1",
     "zigbee2mqtt-frontend": "0.6.121"
   },
   "devDependencies": {
