--- a/.github/workflows/update_frontend.yml
+++ b/.github/workflows/update_frontend.yml
@@ -23,7 +23,7 @@ jobs:
     - uses: peter-evans/create-pull-request@v5
       id: cpr
       with:
-        commit-message: Update zigbee2mqtt-frontend to ${{ github.event.client_payload.version }}
+        commit-message: "chore: update zigbee2mqtt-frontend to ${{ github.event.client_payload.version }}"
         branch: "update_frontend"
         title: Update zigbee-frontend to ${{ github.event.client_payload.version }}
     - run: sleep 5 # Otherwise pull request may not exist yet causing automerge to fail
