feat(ignore): update CI/CD

--- a/.github/workflows/release_please.yml
+++ b/.github/workflows/release_please.yml
@@ -18,3 +18,4 @@ jobs:
           release-type: node
           package-name: release-please-action
           default-branch: master
+          token: ${{secrets.CR_PAT}}
