--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,7 +6,9 @@
       "bump-minor-pre-major": false,
       "bump-patch-for-minor-pre-major": false,
       "draft": false,
-      "prerelease": false
+      "include-v-in-tag": false,
+      "prerelease": false,
+      "skip-github-release": true
     }
   },
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
