--- a/.github/workflows/release_please.yml
+++ b/.github/workflows/release_please.yml
@@ -13,6 +13,11 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+      - name: Checkout zigbee-herdsman-converters
+        uses: actions/checkout@master
+        with:
+          repository: koenkk/zigbee-herdsman-converters
       - uses: google-github-actions/release-please-action@v3
         id: release
         with:
@@ -20,4 +25,5 @@ jobs:
           package-name: release-please-action
           default-branch: dev-temp
           token: ${{secrets.CR_PAT}}
-      - run: echo "${{ steps.release.outputs['pr'] }}"
+      - run: echo "${{ steps.release.outputs }}"
+      - run: node scripts/generateChangelog.js
