--- a/.github/workflows/release_please.yml
+++ b/.github/workflows/release_please.yml
@@ -13,11 +13,6 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Checkout zigbee-herdsman-converters
-        uses: actions/checkout@master
-        with:
-          repository: koenkk/zigbee-herdsman-converters
       - uses: google-github-actions/release-please-action@v3
         id: release
         with:
@@ -25,5 +20,32 @@ jobs:
           package-name: release-please-action
           default-branch: dev-temp
           token: ${{secrets.CR_PAT}}
+        
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          registry-url: https://registry.npmjs.org/
+      - name: Get NodeJS Version
+        id: nodeversion
+        run: |
+          echo "::set-output name=version::$(node --version)"
+      - name: Restore node_modules cache
+        id: cache-node-modules
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-${{ steps.nodeversion.outputs.version }}-${{ hashFiles('package-lock.json') }}
+      - name: Install dependencies
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
+        run: npm ci
+
+      - name: Checkout zigbee-herdsman-converters
+        uses: actions/checkout@master
+        with:
+          repository: koenkk/zigbee-herdsman-converters
+
+      - run: ls
+
       - run: echo "${{ steps.release.outputs }}"
       - run: node scripts/generateChangelog.js
