--- a/.github/workflows/release_please.yml
+++ b/.github/workflows/release_please.yml
@@ -33,8 +33,11 @@ jobs:
       - run: |
           cd z2m
           npm ci
+          echo "LS"
           ls
+          echo "LS scripts"
           ls scripts
+          echo "LS ZHC"
           ls ../zhc
           node scripts/generateChangelog.js ../zhc
 
