--- a/.github/workflows/release_please.yml
+++ b/.github/workflows/release_please.yml
@@ -40,7 +40,10 @@ jobs:
           cp z2m-changelog/CHANGELOG.md z2m
           cd z2m
           npm ci
-          node scripts/generateChangelog.js ../zhc
+          cd ../zhc
+          git log
+          
+      # node scripts/generateChangelog.js ../zhc
 
       - run: echo "${{ steps.release.outputs.pr.number }}"
 
