--- a/.github/workflows/release_please.yml
+++ b/.github/workflows/release_please.yml
@@ -43,12 +43,12 @@ jobs:
           ref: master
       - name: Generate Z2M changelog
         run: |
-# cp z2m-changelog/CHANGELOG.md z2m-dev
           cd z2m-dev
           npm ci
           TILL_ZHC_VERSION=$(cat ../z2m-master/package.json | jq -r ".dependencies")
           echo $TILL_ZHC_VERSION
+# cp z2m-changelog/CHANGELOG.md z2m-dev
 # node scripts/generateChangelog.js $TILL_ZHC_VERSION ../zhc
-
+      - run: gh pr edit 17757 --body "$(gh pr view 17757 --json body | jq -r '.body') BLAA BLAA BLAA"
       - run: echo "${{ steps.release.outputs.pr.number }}"
 
