--- a/.github/workflows/release_please.yml
+++ b/.github/workflows/release_please.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           cd z2m-dev
           npm ci
-          TILL_ZHC_VERSION=$(cat ../z2m-master/package.json | jq -r ".dependencies.zigbee-herdsman-converters")
+          TILL_ZHC_VERSION=$(cat ../z2m-master/package.json | jq -r '.dependencies."zigbee-herdsman-converters"')
           echo $TILL_ZHC_VERSION
 # cp z2m-changelog/CHANGELOG.md z2m-dev
 # node scripts/generateChangelog.js $TILL_ZHC_VERSION ../zhc
