--- a/.github/workflows/release_please.yml
+++ b/.github/workflows/release_please.yml
@@ -43,15 +43,15 @@ jobs:
           ref: master
       - name: Set Z2M changelog in PR
         run: |
-          gh pr view 17757 --json body | jq -r '.body' > changelog
           cp z2m-changelog/CHANGELOG.md z2m-dev
           cd z2m-dev
           npm ci
           TILL_ZHC_VERSION=$(cat ../z2m-master/package.json | jq -r '.dependencies."zigbee-herdsman-converters"')
           echo $TILL_ZHC_VERSION
+          gh pr view 17757 --json body | jq -r '.body' > ../changelog
           node scripts/generateChangelog.js $TILL_ZHC_VERSION ../zhc >> ../changelog
           gh pr edit 17757 --body-file ../changelog
         env:
           GH_TOKEN: ${{secrets.CR_PAT}}
-      - run: echo "${{ steps.release.outputs.pr.number }}"
+      - run: echo "${{ steps.release.outputs.pr }}" | jq -r '.number'
 
