--- a/.github/workflows/release_please.yml
+++ b/.github/workflows/release_please.yml
@@ -24,34 +24,37 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: koenkk/zigbee2mqtt
-          path: './z2m-changelog'
+          path: ./z2m-changelog
           ref: release-please--branches--dev-temp--components--release-please-action
       - uses: actions/checkout@v3
         with:
           repository: koenkk/zigbee-herdsman-converters
-          path: './zhc'
-          fetch-depth: 200
+          path: ./zhc
+          fetch-depth: 500
       - uses: actions/checkout@v3
         with:
           repository: koenkk/zigbee2mqtt
-          path: './z2m-dev'
-          ref: dev-temp
+          path: ./z2m
       - uses: actions/checkout@v3
         with:
           repository: koenkk/zigbee2mqtt
-          path: './z2m-master'
+          path: ./z2m-master
           ref: master
       - name: Set Z2M changelog in PR
         run: |
-          cp z2m-changelog/CHANGELOG.md z2m-dev
-          cd z2m-dev
+          cp z2m-changelog/CHANGELOG.md z2m
+          cd z2m
           npm ci
           TILL_ZHC_VERSION=$(cat ../z2m-master/package.json | jq -r '.dependencies."zigbee-herdsman-converters"')
           echo $TILL_ZHC_VERSION
           gh pr view 17757 --json body | jq -r '.body' > ../changelog
+          echo "CHNAGELLOG A"
+          cat ../changelog
           node scripts/generateChangelog.js $TILL_ZHC_VERSION ../zhc >> ../changelog
+          echo "CHNAGELLOG B"
+          cat ../changelog
           gh pr edit 17757 --body-file ../changelog
         env:
           GH_TOKEN: ${{secrets.CR_PAT}}
-      - run: echo "${{ steps.release.outputs.pr }}" | jq -r '.number'
+      - run: echo '${{ steps.release.outputs.pr }}' | jq -r '.number'
 
