--- a/.github/workflows/release_please.yml
+++ b/.github/workflows/release_please.yml
@@ -48,9 +48,9 @@ jobs:
           cd z2m
           npm ci
           gh pr view $PR --json body | jq -r '.body' > ../changelog
-          echo '\n\n<!--latest-dev-changelog-->' >> ../changelog
+          echo '<!--latest-dev-changelog-->' >> ../changelog
           sed -i '/<!--latest-dev-changelog-->/q' ../changelog
-          echo '\n\n# Latest dev changelog\n\n'
+          echo '# Latest dev changelog' >> ../changelog
           node scripts/generateChangelog.js $MASTER_ZHC_VERSION ../zhc >> ../changelog
           gh pr edit $PR --body-file ../changelog
         env:
