--- a/.github/workflows/release_please.yml
+++ b/.github/workflows/release_please.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           repository: koenkk/zigbee2mqtt
           path: ./z2m
+          fetch-depth: 100
       - uses: actions/checkout@v3
         with:
           repository: koenkk/zigbee2mqtt
@@ -41,16 +42,27 @@ jobs:
           repository: koenkk/zigbee-herdsman-converters
           path: ./zhc
           fetch-depth: 300
+      - uses: actions/checkout@v3
+        with:
+          repository: koenkk/zigbee-herdsman
+          path: ./zh
+          fetch-depth: 100
 
-      # Update latest-dev release changelog
+      - name: Update latest-dev tag
+        run: |
+          cd z2m
+          git push --delete origin latest-dev
+          git tag latest-dev
+          git push origin latest-dev
       - name: Update latest-dev release changelog
         run: |
           PR=$(echo '${{ steps.release.outputs.pr }}' | jq -r '.number')
           MASTER_ZHC_VERSION=$(cat z2m-master/package.json | jq -r '.dependencies."zigbee-herdsman-converters"')
+          MASTER_ZH_VERSION=$(cat z2m-master/package.json | jq -r '.dependencies."zigbee-herdsman"')
           cp z2m-changelog/CHANGELOG.md z2m
           cd z2m
           npm ci
-          node scripts/generateChangelog.js $MASTER_ZHC_VERSION ../zhc >> ../changelog
+          node scripts/generateChangelog.js ../z2m ../zhc ../zh $MASTER_ZHC_VERSION $MASTER_ZH_VERSION >> ../changelog
         env:
           GH_TOKEN: ${{secrets.CR_PAT}}
       - uses: ncipollo/release-action@v1
