--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,7 +2,7 @@ blank_issues_enabled: false
 contact_links:
   - name: "IMPORTANT: Check development branch changelog first!!"
     url: https://github.com/Koenkk/zigbee2mqtt/releases/tag/latest-dev
-    about: Before submitting an issue, check if the issue hasn't already been solved in the development branch. Click "Open" to see the release notes of the development branch. In case it is, read the [docs](https://www.zigbee2mqtt.io/advanced/more/switch-to-dev-branch.html) on how to switch to the development branch.
+    about: "Before submitting an issue, check if the issue hasn't already been solved in the development branch. Click 'Open' to see the release notes of the development branch. In case it is, you can read here how to switch to the development branch: https://www.zigbee2mqtt.io/advanced/more/switch-to-dev-branch.html"
   - name: Questions/discussion
     url: https://github.com/Koenkk/zigbee2mqtt/discussions/new
     about: Ask questions, discuss about devices or show things you made
