--- a/.github/workflows/update_dependency.yml
+++ b/.github/workflows/update_dependency.yml
@@ -19,13 +19,13 @@ jobs:
       with:
         node-version: 20
         cache: npm
-    - run: npm install ${{ github.event.client_payload.name }}@${{ github.event.client_payload.version }} --save-exact
+    - run: npm install ${{ github.event.client_payload.package }}@${{ github.event.client_payload.version }} --save-exact
     - uses: peter-evans/create-pull-request@v5
       id: cpr
       with:
-        commit-message: "fix(ignore): update ${{ github.event.client_payload.name }} to ${{ github.event.client_payload.version }}"
-        branch: "update_dependency_${{ github.event.client_payload.name }}"
-        title: Update ${{ github.event.client_payload.name }} to ${{ github.event.client_payload.version }}
+        commit-message: "fix(ignore): update ${{ github.event.client_payload.package }} to ${{ github.event.client_payload.version }}"
+        branch: "update_dependency_${{ github.event.client_payload.package }}"
+        title: Update ${{ github.event.client_payload.package }} to ${{ github.event.client_payload.version }}
     - run: sleep 5 # Otherwise pull request may not exist yet causing automerge to fail
     - uses: peter-evans/enable-pull-request-automerge@v3
       if: steps.cpr.outputs.pull-request-operation == 'created'
